turned stylesheets into partials for correct order rendering -- see this answer for more details http://stackoverflow.com/questions/26147447/using-bourbon-with-wagon-locomotive-cms

--- a/public/stylesheets/site/_index.scss
+++ b/public/stylesheets/site/_index.scss
@@ -3,8 +3,5 @@
 // All rights reserved
 
 // Pull in application stylesheets here
+@import "susy_config";
 @import "settings";
-
-.container {
-  @include container();
-}
